v.0.0.2 minor ui fixes
v.0.0.2 minor ui fixes

--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ a:hover {
                 </div>
             </div>
             <h2>Ripple tools</h2>
+            <span class="supersmall terms">v. 0.0.2</span>
 
             <div class="terms">
                 <button onclick="location.href='https://github.com/Bithomp/ripple-tools';" class="button github">Download <svg width="22" height="22" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 .5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z" fill="#fff"/></svg></button>
@@ -499,6 +500,23 @@ a:hover {
 
             <div class="terms-agreed hidden">
 
+                <div class="switch-field">
+                    <input type="radio" id="switch_online" name="tool_mode" value="online" checked/>
+                    <label for="switch_online">Online</label>
+                    <input type="radio" id="switch_offline" name="tool_mode" value="offline" />
+                    <label for="switch_offline">Offline</label>
+                </div>
+
+                <fieldset class="server">
+                    <div>
+                        <input type="text" id="server" placeholder="Enter the ripple server here" value="wss://s1.ripple.com" />
+                        <input type="button" value="connect" id="server_connect" class="server-not-connected" />
+                        <div class="feedback" id="server_feedback"></div>
+                    </div>
+                </fieldset>
+
+                <hr>
+
                 <h3>Choose a type of transaction</h3>
 
                 <div class="switch-field">
@@ -514,25 +532,6 @@ a:hover {
                     <input type="radio" id="switch_settings" name="tx_type" value="settings" />
                     <label for="switch_settings">Settings</label>
                 </div>
-
-                <hr>
-
-                <h3>Tool mode</h3>
-
-                <div class="switch-field">
-                    <input type="radio" id="switch_online" name="tool_mode" value="online" checked/>
-                    <label for="switch_online">Online</label>
-                    <input type="radio" id="switch_offline" name="tool_mode" value="offline" />
-                    <label for="switch_offline">Offline</label>
-                </div>
-
-                <fieldset class="server">
-                    <div>
-                        <input type="text" id="server" placeholder="Enter the ripple server here" value="wss://s1.ripple.com" />
-                        <input type="button" value="connect" id="server_connect" class="server-not-connected" />
-                        <div class="feedback" id="server_feedback"></div>
-                    </div>
-                </fieldset>
 
                 <fieldset id="choose-wallet-type" class="hidden">
                     <hr>
@@ -555,18 +554,16 @@ a:hover {
 
                     <div class="secret">
                         <input type="text" id="secret" placeholder="Enter your Ripple secret here" />
-                        <input type="password" id="secret_hidden" value="shRzSqJkipGiSHGb31cLfd6cm4QTh" class="hidden" />
+                        <input type="text" id="secret_hidden" placeholder="*****************************" class="hidden" />
                     </div>
 
                     <div class="feedback" id="feedback"></div>
                     <div class="set-address hidden">
-
                         <label class="container container-set-address">
                             Sign on behalf of a different address.
                             <input type="checkbox" id="set_address">
                             <span class="checkmark"></span>
                         </label>
-                        
                         <input id="sign_address" placeholder="Enter a Ripple address" class="sign-address hidden" />
                         <div class="feedback sign-address hidden" id="sign_address_feedback"></div>
                     </div>
@@ -90543,7 +90540,7 @@ function escrowButtonCancelClicked() {
   escrowSequence = parseInt(escrowSequence);
 
   if (!escrowSequence || escrowSequence < 0) {
-    DOM.txFeedback.html('Enter Sequence (#) of the escrow, try to find it here: <br><a href="' + explorer + owner + '" target="_blank">' + explorer + owner + '</a>');
+    DOM.txFeedback.html('Enter Sequence (#) of the escrow, try to find it here: <br><a href="' + explorer + owner + '" class="supersmall" target="_blank">' + explorer + owner + '</a>');
     DOM.escrowSequence.focus();
     return;
   }
@@ -90640,7 +90637,7 @@ function escrowButtonExecuteClicked() {
   escrowSequence = parseInt(escrowSequence);
 
   if (!escrowSequence || escrowSequence < 0) {
-    DOM.txFeedback.html('Enter Sequence (#) of the escrow, try to find it here: <br><a href="' + explorer + owner + '" target="_blank">' + explorer + owner + '</a>');
+    DOM.txFeedback.html('Enter Sequence (#) of the escrow, try to find it here: <br><a href="' + explorer + owner + '" class="supersmall" target="_blank">' + explorer + owner + '</a>');
     DOM.escrowSequence.focus();
     return;
   }
@@ -90982,7 +90979,7 @@ function txSequence(account) {
   var sequence = DOM.sequence.val();
   sequence = parseInt(sequence);
   if (!sequence || sequence < 1) {
-    DOM.txFeedback.html('Find "next sequence" in the "information" block here: <a href="' + explorer + account + '" target="_blank">' + explorer + account + '</a>.');
+    DOM.txFeedback.html('Find "next sequence" in the "information" block here: <a href="' + explorer + account + '" class="supersmall" target="_blank">' + explorer + account + '</a>.');
     DOM.sequence.focus();
     return false;
   }
