--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <h2>Ripple tools</h2>
-            <span class="supersmall terms">v. 0.0.2</span>
+            <span class="supersmall terms" id="version">loading...</span>
 
             <div class="terms">
                 <button onclick="location.href='https://github.com/Bithomp/ripple-tools';" class="button github">Download <svg width="22" height="22" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 .5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z" fill="#fff"/></svg></button>
@@ -118,7 +118,7 @@
 
                 <fieldset class="server">
                     <div>
-                        <input type="text" id="server" placeholder="Enter the ripple server here" value="wss://s1.ripple.com" />
+                        <input type="text" id="server" placeholder="Enter the ripple server here" value="wss://s1.ripple.com" spellcheck="false" />
                         <input type="button" value="connect" id="server_connect" class="server-not-connected" />
                         <div class="feedback" id="server_feedback"></div>
                     </div>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="secret">
-                        <input type="text" id="secret" placeholder="Enter your Ripple secret here" />
+                        <input type="text" id="secret" placeholder="Enter your Ripple secret here" spellcheck="false" />
                         <input type="text" id="secret_hidden" placeholder="*****************************" class="hidden" />
                     </div>
 
@@ -173,7 +173,7 @@
                             <input type="checkbox" id="set_address">
                             <span class="checkmark"></span>
                         </label>
-                        <input id="sign_address" placeholder="Enter a Ripple address" class="sign-address hidden" />
+                        <input id="sign_address" placeholder="Enter a Ripple address" class="sign-address hidden" spellcheck="false" />
                         <div class="feedback sign-address hidden" id="sign_address_feedback"></div>
                     </div>
                     <div class="feedback" id="account_feedback"></div>
@@ -186,23 +186,23 @@
                         <div class="fields-wide payment-fields">
                             <div>
                                 <div class="left">Recipient:</div>
-                                <div class="right"><input id="payment_recipient" placeholder="Ripple address of a payee" /></div>
+                                <div class="right"><input id="payment_recipient" placeholder="Ripple address of a payee" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Destination tag:</div>
-                                <div class="right"><input id="payment_destination_tag" placeholder="If it's required" /></div>
+                                <div class="right"><input id="payment_destination_tag" placeholder="If it's required" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Amount:</div>
-                                <div class="right"><input id="payment_amount" /></div>
+                                <div class="right"><input id="payment_amount" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Currency:</div>
-                                <div class="right"><input id="payment_currency" value="XRP" /></div>
+                                <div class="right"><input id="payment_currency" value="XRP" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Counterparty:</div>
-                                <div class="right"><input id="payment_counterparty" placeholder="If the currency is different from XRP" /></div>
+                                <div class="right"><input id="payment_counterparty" placeholder="If the currency is different from XRP" spellcheck="false" /></div>
                             </div>
 
                         </div>
@@ -210,31 +210,31 @@
                         <div class="fields-wide hidden trustline-fields">
                             <div>
                                 <div class="left">Currency:</div>
-                                <div class="right"><input id="trustline_currency" placeholder="BTC" /></div>
+                                <div class="right"><input id="trustline_currency" placeholder="BTC" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Counterparty:</div>
-                                <div class="right"><input id="trustline_counterparty" placeholder="Gateway's ripple address" /></div>
+                                <div class="right"><input id="trustline_counterparty" placeholder="Gateway's ripple address" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Limit:</div>
-                                <div class="right"><input id="trustline_limit" placeholder="only when you add a trustline" value="10000000" /></div>
+                                <div class="right"><input id="trustline_limit" placeholder="only when you add a trustline" value="10000000" spellcheck="false" /></div>
                             </div>
                         </div>
 
                         <div class="fields-wide hidden escrow-fields">
                             <div>
                                 <div class="left">Owner:</div>
-                                <div class="right"><input id="escrow_owner" placeholder="Ripple address of the escrow owner" /></div>
+                                <div class="right"><input id="escrow_owner" placeholder="Ripple address of the escrow owner" spellcheck="false" /></div>
                             </div>
                             <div>
                                 <div class="left">Escrow sequence:</div>
-                                <div class="right"><input id="escrow_sequence" placeholder="sequence of the escrow to execute" /></div>
+                                <div class="right"><input id="escrow_sequence" placeholder="sequence of the escrow to execute" spellcheck="false" /></div>
                             </div>
                         </div>
 
                         <div class="switch-field hidden settings-fields">
-                            <input type="radio" id="switch_settings_domain" name="settings_type" value="domain" checked="checked"/>
+                            <input type="radio" id="switch_settings_domain" name="settings_type" value="domain" checked="checked" />
                             <label for="switch_settings_domain">Domain</label>
                             <input type="radio" id="switch_settings_gravatar" name="settings_type" value="gravatar" />
                             <label for="switch_settings_gravatar">Gravatar</label>
@@ -244,17 +244,17 @@
 
                         <div class="fields-wide hidden settings-fields">
                             <div class="settings-domain">
-                                <input id="settings_domain" placeholder="Domain name, ex: mysite.com" />
+                                <input id="settings_domain" placeholder="Domain name, ex: mysite.com" spellcheck="false" />
                                 <br><br>
                             </div>
                             <div class="settings-gravatar hidden">
-                                <input id="settings_email" placeholder="Gravatar email" />
+                                <input id="settings_email" placeholder="Gravatar email" spellcheck="false" />
                                 <div class="orange note">
-                                    Set a gravatar email to your ripple account in order to show your avatar in the bithomp explorer and in some other software.
+                                    Set a <a href="https://gravatar.com" target="_blank">gravatar</a> email to your ripple account in order to show your avatar in the bithomp explorer and in some other software.
                                 </div>
                             </div>
                             <div class="settings-regularKey hidden">
-                                <input id="settings_regularKey" placeholder="Regular key" />
+                                <input id="settings_regularKey" placeholder="Regular key" spellcheck="false" />
                                 <div class="orange note">
                                     Here you can assign another ripple keypair to manage your account.<br>
                                     Danger: you may lose all your XRP and other assets if you assign an address you are not in control of.
@@ -265,11 +265,11 @@
                         <div class="fields-wide">
                             <div>
                                 <div class="left">Fee to pay (XRP):</div>
-                                <div class="right"><input id="fee" value="0.000012" placeholder="0.000012" /></div>
+                                <div class="right"><input id="fee" value="0.000012" placeholder="0.000012" spellcheck="false" /></div>
                             </div>
                             <div class="offline-fields hidden">
                                 <div class="left">Next sequence:</div>
-                                <div class="right"><input id="sequence" placeholder="sequence of the transaction" /></div>
+                                <div class="right"><input id="sequence" placeholder="sequence of the transaction" spellcheck="false" /></div>
                             </div>
                             <div class="payment-fields escrow-fields hidden">
                                 <div class="left">Memo (optional):</div>
