v 0.0.9 offline functionality: shows json to copy.
v 0.0.9 offline functionality: shows json to copy.

--- a/index.html
+++ b/index.html
@@ -790,6 +790,7 @@ a:hover {
                                 <hr>
                                 On your phone or another connected computer open a page: 
                                 <span id="submit-link" class="small">https://bithomp.com/submit</span>
+                                You can use a Phone QR Reader to scan the above URL:
                                 <div id="submitUrlQR" class="submitUrlQR"></div>
                                 Find there the <b>recommended fee</b> and the <b>next sequence</b>.
                                 <hr>
@@ -90982,7 +90983,7 @@ var QRCode;
 </script>
         <script>(function() {
 
-var version = '0.0.8';
+var version = '0.0.9';
 var api = new ripple.RippleAPI();
 var mnemonic = new Mnemonic("english");
 var seed = null;
@@ -91164,12 +91165,8 @@ function txBlobClicked() {
 
 function showSignedTX(signed) {
   DOM.txFeedback.html('<br>Transaction signed.<div class="note">Scan the QR or copy the transaction blob (in the grey box) and submit it on the page you\'ve already opened.</div>');
-  DOM.txBlob.val(signed.signedTransaction);
-  var tx = {
-    blob: signed.signedTransaction,
-    hash: signed.id
-  };
-  tx = JSON.stringify(tx);
+  var tx = JSON.stringify(signed);
+  DOM.txBlob.val(tx);
   blobQR.makeCode(tx);
 }
 
@@ -92056,8 +92053,9 @@ function checkBalance(accountDOM, feedbackFieldDOM) {
         }
         var p = Math.pow(10, n);
         available = Math.floor(available * p) / p;
+        var balance = Math.floor(info.xrpBalance * p) / p;
         if (available < 0) available = 0;
-        feedbackFieldDOM.html("Balance: " + info.xrpBalance + " XRP; You can spend: " + available + " XRP");
+        feedbackFieldDOM.html("Balance: " + balance + " XRP; You can spend: " + available + " XRP");
         if (DOM.setAddress.is(':checked')) {
           validateRegularKey();
         } else {
