--- a/src/index.html
+++ b/src/index.html
@@ -289,6 +289,7 @@
                                 <hr>
                                 On your phone or another connected computer open a page: 
                                 <span id="submit-link" class="small">https://bithomp.com/submit</span>
+                                You can use a Phone QR Reader to scan the above URL:
                                 <div id="submitUrlQR" class="submitUrlQR"></div>
                                 Find there the <b>recommended fee</b> and the <b>next sequence</b>.
                                 <hr>
